--- a/templates/pages/blog.html
+++ b/templates/pages/blog.html
@@ -28,26 +28,28 @@
         <p class="info_pages_text">Lorem ipsum dolor sit amet consectetur. Ac feugiat fames feugiat sed eget mi vel egestas. Eget tortor augue dictum auctor. A ornare tincidunt scelerisque tristique tristique ac sagittis quam cras. Nisl nec id vitae neque. Et aliquet morbi tortor vestibulum. Nisl vivamus id mi varius eget. <br> Fermentum etiam pellentesque risus nisi. <br>
             Aenean pulvinar vulputate pharetra mattis. Tellus nibh amet nibh tortor. Fringilla nulla tristique vestibulum consequat nibh mattis diam eu. Cras egestas leo ligula fames orci bibendum. Libero pretium at molestie aliquet. Blandit a velit pharetra nisi quam fermentum.
         </p>
-        <div class="article__pictures">
-            <img src="./img/blog/article1/1.png" class="picture" alt="#">
-            <img src="./img/blog/article1/4.png" class="picture" alt="#">
-            <img src="./img/blog/article1/2.png" class="picture" alt="#">
-            <img src="./img/blog/article1/3.png" class="picture" alt="#">
-            
-            <!-- Стрелки скролла начало -->
-            <a href="#" class="scroll_arrow article_arrow_left">
-                <svg xmlns="http://www.w3.org/2000/svg" width="8" height="14" viewBox="0 0 8 14" fill="none">
-                    <path d="M7 0.5L0.750001 6.75L7 13" stroke="#393939" stroke-width="0.833333" stroke-linecap="round" stroke-linejoin="round"/>
-                </svg>
-            </a>
-
-            <a href="#" class="scroll_arrow article_arrow_right">
-                <svg xmlns="http://www.w3.org/2000/svg" width="8" height="14" viewBox="0 0 8 14" fill="none">
-                    <path d="M1 13.5L7.25 7.25L1 1" stroke="#393939" stroke-width="0.833333" stroke-linecap="round" stroke-linejoin="round"/>
-                </svg>
-            </a>
-            <!-- Стрелки скролла конец -->
-        </div>
+        <span class="art_pic">
+            <div class="article__pictures article-1">
+                <img src="./img/blog/article1/1.png" class="picture" alt="#">
+                <img src="./img/blog/article1/4.png" class="picture" alt="#">
+                <img src="./img/blog/article1/2.png" class="picture" alt="#">
+                <img src="./img/blog/article1/3.png" class="picture" alt="#">
+                
+                <!-- Стрелки скролла начало -->
+                <div class="scroll_arrow article_arrow_left left">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="8" height="14" viewBox="0 0 8 14" fill="none">
+                        <path d="M7 0.5L0.750001 6.75L7 13" stroke="#393939" stroke-width="0.833333" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                </div>
+    
+                <div class="scroll_arrow article_arrow_right right">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="8" height="14" viewBox="0 0 8 14" fill="none">
+                        <path d="M1 13.5L7.25 7.25L1 1" stroke="#393939" stroke-width="0.833333" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                </div>
+                <!-- Стрелки скролла конец -->
+            </div>
+        </span>
         <p class="info_pages_text">Lorem ipsum dolor sit amet consectetur. Ac feugiat fames feugiat sed eget mi vel egestas. Eget tortor augue dictum auctor. A ornare tincidunt scelerisque tristique tristique ac sagittis quam cras. Nisl nec id vitae neque. Et aliquet morbi tortor vestibulum. Nisl vivamus id mi varius eget. <br> Fermentum etiam pellentesque risus nisi. <br>
             Aenean pulvinar vulputate pharetra mattis. Tellus nibh amet nibh tortor. Fringilla nulla tristique vestibulum consequat nibh mattis diam eu. Cras egestas leo ligula fames orci bibendum. Libero pretium at molestie aliquet. Blandit a velit pharetra nisi quam fermentum.
         </p>
@@ -67,25 +69,27 @@
         <p class="info_pages_text">Lorem ipsum dolor sit amet consectetur. Ac feugiat fames feugiat sed eget mi vel egestas. Eget tortor augue dictum auctor. A ornare tincidunt scelerisque tristique tristique ac sagittis quam cras. Nisl nec id vitae neque. Et aliquet morbi tortor vestibulum. Nisl vivamus id mi varius eget. <br> Fermentum etiam pellentesque risus nisi. <br>
             Aenean pulvinar vulputate pharetra mattis. Tellus nibh amet nibh tortor. Fringilla nulla tristique vestibulum consequat nibh mattis diam eu. Cras egestas leo ligula fames orci bibendum. Libero pretium at molestie aliquet. Blandit a velit pharetra nisi quam fermentum.
         </p>
-        <div class="article__pictures">
-            <img src="./img/blog/article2/1.png" class="picture" alt="#">
-            <img src="./img/blog/article2/2.png" class="picture" alt="#">
-            <img src="./img/blog/article2/3.png" class="picture" alt="#">
-            
-            <!-- Стрелки скролла начало -->
-            <a href="#" class="scroll_arrow article_arrow_left">
-                <svg xmlns="http://www.w3.org/2000/svg" width="8" height="14" viewBox="0 0 8 14" fill="none">
-                    <path d="M7 0.5L0.750001 6.75L7 13" stroke="#393939" stroke-width="0.833333" stroke-linecap="round" stroke-linejoin="round"/>
-                </svg>
-            </a>
+        <span class="art_pic">
+            <div class="article__pictures article-2">
+                <img src="./img/blog/article2/1.png" class="picture" alt="#">
+                <img src="./img/blog/article2/2.png" class="picture" alt="#">
+                <img src="./img/blog/article2/3.png" class="picture" alt="#">
+                
+                <!-- Стрелки скролла начало -->
+                <div class="scroll_arrow article_arrow_left left">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="8" height="14" viewBox="0 0 8 14" fill="none">
+                        <path d="M7 0.5L0.750001 6.75L7 13" stroke="#393939" stroke-width="0.833333" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                </div>
 
-            <a href="#" class="scroll_arrow article_arrow_right">
-                <svg xmlns="http://www.w3.org/2000/svg" width="8" height="14" viewBox="0 0 8 14" fill="none">
-                    <path d="M1 13.5L7.25 7.25L1 1" stroke="#393939" stroke-width="0.833333" stroke-linecap="round" stroke-linejoin="round"/>
-                </svg>
-            </a>
-            <!-- Стрелки скролла конец -->
-        </div>
+                <div class="scroll_arrow article_arrow_right right">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="8" height="14" viewBox="0 0 8 14" fill="none">
+                        <path d="M1 13.5L7.25 7.25L1 1" stroke="#393939" stroke-width="0.833333" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                </div>
+                <!-- Стрелки скролла конец -->
+            </div>
+        </span>
         <p class="info_pages_text">Lorem ipsum dolor sit amet consectetur. Ac feugiat fames feugiat sed eget mi vel egestas. Eget tortor augue dictum auctor. A ornare tincidunt scelerisque tristique tristique ac sagittis quam cras. Nisl nec id vitae neque. Et aliquet morbi tortor vestibulum. Nisl vivamus id mi varius eget. <br> Fermentum etiam pellentesque risus nisi. <br>
             Aenean pulvinar vulputate pharetra mattis. Tellus nibh amet nibh tortor. Fringilla nulla tristique vestibulum consequat nibh mattis diam eu. Cras egestas leo ligula fames orci bibendum. Libero pretium at molestie aliquet. Blandit a velit pharetra nisi quam fermentum.
         </p>
@@ -105,25 +109,27 @@
         <p class="info_pages_text">Lorem ipsum dolor sit amet consectetur. Ac feugiat fames feugiat sed eget mi vel egestas. Eget tortor augue dictum auctor. A ornare tincidunt scelerisque tristique tristique ac sagittis quam cras. Nisl nec id vitae neque. Et aliquet morbi tortor vestibulum. Nisl vivamus id mi varius eget. <br> Fermentum etiam pellentesque risus nisi. <br>
             Aenean pulvinar vulputate pharetra mattis. Tellus nibh amet nibh tortor. Fringilla nulla tristique vestibulum consequat nibh mattis diam eu. Cras egestas leo ligula fames orci bibendum. Libero pretium at molestie aliquet. Blandit a velit pharetra nisi quam fermentum.
         </p>
-        <div class="article__pictures">
-            <img src="./img/blog/article3/1.png" class="picture" alt="#">
-            <img src="./img/blog/article3/2.png" class="picture" alt="#">
-            <img src="./img/blog/article3/3.png" class="picture" alt="#">
-            
-            <!-- Стрелки скролла начало -->
-            <a href="#" class="scroll_arrow article_arrow_left">
-                <svg xmlns="http://www.w3.org/2000/svg" width="8" height="14" viewBox="0 0 8 14" fill="none">
-                    <path d="M7 0.5L0.750001 6.75L7 13" stroke="#393939" stroke-width="0.833333" stroke-linecap="round" stroke-linejoin="round"/>
-                </svg>
-            </a>
+        <span class="art_pic">
+            <div class="article__pictures article-3">
+                <img src="./img/blog/article3/1.png" class="picture" alt="#">
+                <img src="./img/blog/article3/2.png" class="picture" alt="#">
+                <img src="./img/blog/article3/3.png" class="picture" alt="#">
+                
+                <!-- Стрелки скролла начало -->
+                <div class="scroll_arrow article_arrow_left left">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="8" height="14" viewBox="0 0 8 14" fill="none">
+                        <path d="M7 0.5L0.750001 6.75L7 13" stroke="#393939" stroke-width="0.833333" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                </div>
 
-            <a href="#" class="scroll_arrow article_arrow_right">
-                <svg xmlns="http://www.w3.org/2000/svg" width="8" height="14" viewBox="0 0 8 14" fill="none">
-                    <path d="M1 13.5L7.25 7.25L1 1" stroke="#393939" stroke-width="0.833333" stroke-linecap="round" stroke-linejoin="round"/>
-                </svg>
-            </a>
-            <!-- Стрелки скролла конец -->
-        </div>
+                <div class="scroll_arrow article_arrow_right right">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="8" height="14" viewBox="0 0 8 14" fill="none">
+                        <path d="M1 13.5L7.25 7.25L1 1" stroke="#393939" stroke-width="0.833333" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                </div>
+                <!-- Стрелки скролла конец -->
+            </div>
+        </span>
         <p class="info_pages_text">Lorem ipsum dolor sit amet consectetur. Ac feugiat fames feugiat sed eget mi vel egestas. Eget tortor augue dictum auctor. A ornare tincidunt scelerisque tristique tristique ac sagittis quam cras. Nisl nec id vitae neque. Et aliquet morbi tortor vestibulum. Nisl vivamus id mi varius eget. <br> Fermentum etiam pellentesque risus nisi. <br>
             Aenean pulvinar vulputate pharetra mattis. Tellus nibh amet nibh tortor. Fringilla nulla tristique vestibulum consequat nibh mattis diam eu. Cras egestas leo ligula fames orci bibendum. Libero pretium at molestie aliquet. Blandit a velit pharetra nisi quam fermentum.
         </p>
@@ -143,25 +149,27 @@
         <p class="info_pages_text">Lorem ipsum dolor sit amet consectetur. Ac feugiat fames feugiat sed eget mi vel egestas. Eget tortor augue dictum auctor. A ornare tincidunt scelerisque tristique tristique ac sagittis quam cras. Nisl nec id vitae neque. Et aliquet morbi tortor vestibulum. Nisl vivamus id mi varius eget. <br> Fermentum etiam pellentesque risus nisi. <br>
             Aenean pulvinar vulputate pharetra mattis. Tellus nibh amet nibh tortor. Fringilla nulla tristique vestibulum consequat nibh mattis diam eu. Cras egestas leo ligula fames orci bibendum. Libero pretium at molestie aliquet. Blandit a velit pharetra nisi quam fermentum.
         </p>
-        <div class="article__pictures">
-            <img src="./img/blog/article4/1.png" class="picture_vertical" alt="#">
-            <img src="./img/blog/article4/2.png" class="picture_vertical" alt="#">
-            <img src="./img/blog/article4/3.png" class="picture_vertical" alt="#">
-            
-            <!-- Стрелки скролла начало -->
-            <a href="#" class="scroll_arrow article_arrow_left">
-                <svg xmlns="http://www.w3.org/2000/svg" width="8" height="14" viewBox="0 0 8 14" fill="none">
-                    <path d="M7 0.5L0.750001 6.75L7 13" stroke="#393939" stroke-width="0.833333" stroke-linecap="round" stroke-linejoin="round"/>
-                </svg>
-            </a>
+        <span class="art_pic">
+            <div class="article__pictures article-4">
+                <img src="./img/blog/article4/1.png" class="picture_vertical" alt="#">
+                <img src="./img/blog/article4/2.png" class="picture_vertical" alt="#">
+                <img src="./img/blog/article4/3.png" class="picture_vertical" alt="#">
+                
+                <!-- Стрелки скролла начало -->
+                <div class="scroll_arrow article_arrow_left left">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="8" height="14" viewBox="0 0 8 14" fill="none">
+                        <path d="M7 0.5L0.750001 6.75L7 13" stroke="#393939" stroke-width="0.833333" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                </div>
 
-            <a href="#" class="scroll_arrow article_arrow_right">
-                <svg xmlns="http://www.w3.org/2000/svg" width="8" height="14" viewBox="0 0 8 14" fill="none">
-                    <path d="M1 13.5L7.25 7.25L1 1" stroke="#393939" stroke-width="0.833333" stroke-linecap="round" stroke-linejoin="round"/>
-                </svg>
-            </a>
-            <!-- Стрелки скролла конец -->
-        </div>
+                <div class="scroll_arrow article_arrow_right right">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="8" height="14" viewBox="0 0 8 14" fill="none">
+                        <path d="M1 13.5L7.25 7.25L1 1" stroke="#393939" stroke-width="0.833333" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                </div>
+                <!-- Стрелки скролла конец -->
+            </div>
+            </span>
         <p class="info_pages_text">Lorem ipsum dolor sit amet consectetur. Ac feugiat fames feugiat sed eget mi vel egestas. Eget tortor augue dictum auctor. A ornare tincidunt scelerisque tristique tristique ac sagittis quam cras. Nisl nec id vitae neque. Et aliquet morbi tortor vestibulum. Nisl vivamus id mi varius eget. <br> Fermentum etiam pellentesque risus nisi. <br>
             Aenean pulvinar vulputate pharetra mattis. Tellus nibh amet nibh tortor. Fringilla nulla tristique vestibulum consequat nibh mattis diam eu. Cras egestas leo ligula fames orci bibendum. Libero pretium at molestie aliquet. Blandit a velit pharetra nisi quam fermentum.
         </p>
