--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -532,6 +532,20 @@
             <a href="blog.html" class="main_text_contrast underline">Читать все статьи</a>
         </div>
 
+        <!-- Стрелки скролла начало -->
+        <div class="scroll_arrow arrow_left left">
+            <svg xmlns="http://www.w3.org/2000/svg" width="8" height="14" viewBox="0 0 8 14" fill="none">
+                <path d="M7 0.5L0.750001 6.75L7 13" stroke="#393939" stroke-width="0.833333" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
+        </div>
+    
+        <div class="scroll_arrow arrow_right right">
+            <svg xmlns="http://www.w3.org/2000/svg" width="8" height="14" viewBox="0 0 8 14" fill="none">
+                <path d="M1 13.5L7.25 7.25L1 1" stroke="#393939" stroke-width="0.833333" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
+        </div>
+        <!-- Стрелки скролла конец -->
+
     </div>
 
     <a href="blog.html" class="main_text_contrast read_more">Читать все статьи</a>
