--- a/templates/pages/making_order_data.html
+++ b/templates/pages/making_order_data.html
@@ -234,7 +234,7 @@
                     <div class="info_cell">
                         <p class="addit_text_addit_dark">Номер карты</p>
                         <form method="GET" action="#" >
-                            <input type="number">
+                            <input type="text" placeholder="**** **** **** ****">
                         </form>
                     </div>
     
@@ -242,7 +242,7 @@
                         <div class="info_cell">
                             <p class="addit_text_addit_dark">Месяц / Год</p>
                             <form method="GET" action="#" >
-                                <input type="text">
+                                <input type="text" placeholder="** / **">
                             </form>
                         </div>
                         <div class="info_cell">
@@ -256,7 +256,7 @@
                                 <sup class="hidden_hint small_text_addit_dark">три цифры на оборотной стороне карты</sup>
                             </div>
                             <form method="GET" action="#" >
-                                <input type="number">
+                                <input type="text" placeholder="***">
                             </form>
                         </div>
     
