--- a/scss/assets/_main.scss
+++ b/scss/assets/_main.scss
@@ -202,6 +202,7 @@ html {
 
         .nav_menu__men {
             cursor: pointer;
+            border-bottom: 1.5px solid $main_color_light;
         }
 
         .nav_menu__men:hover {
@@ -3655,7 +3656,7 @@ html {
 }
 
 .fullscrean_img {
-    transform: scale(2);
+    transform: scale(2.5);
     transition: .3s;
     position: absolute;
     left: calc(33% + 10px);
