changed css part 20

--- a/scss/assets/_main.scss
+++ b/scss/assets/_main.scss
@@ -194,6 +194,7 @@ html {
 
         .nav_menu__women {
             cursor: pointer;
+            border-bottom: 1.5px solid $main_color_light;
         }
 
         .nav_menu__women:hover {
