changed css part 21

--- a/scss/assets/_main.scss
+++ b/scss/assets/_main.scss
@@ -1078,6 +1078,7 @@ html {
                     // height: 77px;
                     margin-bottom: 36px;
                     display: -webkit-box;
+                    line-clamp: 4;
                     -webkit-line-clamp: 4;
                     -webkit-box-orient: vertical;  
                     overflow: hidden;
